# ProjectBase

./: .gitignore  LICENSE  README.md  requirements.txt  run.sh  setup.sh
configs/: CMakeLists.txt  configs.json  requirements.txt
docs/: CI_INFRA.md  CONFIGS.md  FAQ.md  INTERNALS.md  PROJ_MANAGEMENT.md  TODO.md  USAGE.md
scripts/: .clang-format  DEPENDENCIES.md  clang-tidy-diff.py  common.py  completer.py  dependency_graph.py  git.py  gitall.py  handle_script_setup.py  new.py  process.py  project.py  repository.py  requirements.txt  run-clang-tidy.py  run.py  run_executable.py  run_linter.py  run_load_fast.py  run_tests.py  settings.py  setup_helper.py
scripts/data/: colors.py  common.py  error.py  git.py  json.py  paths.py  print.py  settings.py
scripts/menus/: analyze.py  ci.py  clean.py  kconfig.py  main.py  menu.py  run.py  settings.py  version.py
scripts/processes/: PB_debug_terminal.py  auto_completer.py  filesystem.py  flamegraph.py  git.py  git_operations.py  http.py  kconfig_generaton.py  linter.py  load_fast.py  process.py  progress_bar.py  project.py  repository.py  repository_configs.py  run_exec.py  run_linter.py  versioning.py
scripts/projects/ProjectBaseTests.ProjectBase/: root_url.txt
scripts/templates/examples/: exampleCustomCMakeLists.txt
scripts/templates/project/: BuildScript.sh  CMakeLists copy.txt  CMakeLists.txt  Makefile  SelfInstallScript.sh
scripts/templates/repository/: CMakeLists copy.txt  CMakeLists.txt  Makefile  README.md  gitIgnore copy
templates/: scriptHeader.sh
templates/examples/: exampleCustomCMakeLists.txt  exampleHeader.hpp  exampleSource.cpp  exampleTest.cpp
templates/project/: CMakeLists.txt  setup.sh
templates/repository/: CMakeLists.txt  README.md
testSuite/: PB_test_base_repos.py  PB_test_support.py  testSuite_branches.py  testSuite_ci.py  testSuite_core.py  testSuite_create_test_repos.py
test_suite/: PB_test_support.py  test_project_base.py
